Section 508 Fix for Contacts Widget
-- ARIA attributes added to HTML

--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -857,7 +857,7 @@
                                     </h4>
                                     <button type="button" id="closecontacts" class="close" data-target="#mydata2" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
                             </div>
-                            <div id="collapse2" class="panel-collapse collapse" aria-labelledby="contactsbtn">
+                            <div id="collapse2" class="panel-collapse collapse" aria-labelledby="contactsbtn" role="alert" aria-live="assertive">
                                <table class="list-group table-fixed" role="grid" aria-label="contacts">
                                 <tbody>
                                     <tr role="row">
