--- a/amend_mark_ROA_optional.html
+++ b/amend_mark_ROA_optional.html
@@ -239,16 +239,20 @@
                             <fieldset aria-label="amend information">
                                 <div class="row">
                                     <div class="col-xs-12" id="amendarea">
-                                        <input class="form-check-input checkmark" type="checkbox" value="amendescription" tabindex="0" aria-labelledby="amendescript" id="amendd" name="amendd">
-                                        <label class="form-check-label form-check-left form-check" for="amendd" id="amendescript"><span class="radio notspecial">I need to amend the description of my mark to confirm to my specimen</span></label>
-                                        <div id="amenddescript" role="alert">
-                                            <textarea id="ta2" rows="3" class="form-control" aria-labelledby="amendescript"></textarea>
+                                    	<div>
+                                            <input class="form-check-input checkmark" type="checkbox" value="amendescription" tabindex="0" aria-labelledby="amendescript" id="amendd" name="amendd">
+                                            <label class="form-check-label form-check-left form-check" for="amendd" id="amendescript"><span class="radio notspecial">I need to amend the description of my mark to confirm to my specimen</span></label>
+                                            <div id="amenddescript" role="alert">
+                                                <textarea id="ta2" rows="3" class="form-control" aria-labelledby="amendescript"></textarea>
+                                            </div>
                                         </div>
-                                        <input class="form-check-input checkmark" type="checkbox" value="amendmarkliteral" tabindex="0" aria-labelledby="editliteral" id="amendliteral" name="amendliteral">
-                                        <label class="form-check-label form-check-left form-check" for="amendliteral" id="editliteral"><span class="radio notspecial">I need to amend the mark literal</span></label>
-                                        <div id="amendlit" role="alert">
-                                            <textarea id="ta014" rows="3" class="form-control" aria-labelledby="editliteral"></textarea>
-                                        </div>
+                                        <div>
+                                            <input class="form-check-input checkmark" type="checkbox" value="amendmarkliteral" tabindex="0" aria-labelledby="editliteral" id="amendliteral" name="amendliteral">
+                                            <label class="form-check-label form-check-left form-check" for="amendliteral" id="editliteral"><span class="radio notspecial">I need to amend the mark literal</span></label>
+                                            <div id="amendlit" role="alert">
+                                                <textarea id="ta014" rows="3" class="form-control" aria-labelledby="editliteral"></textarea>
+                                            </div>
+                                      	</div>
                                     </div>
                                 </div>
                                 <p id="addmkinfo" class="form-group form-group md">Do you need to include additional information about the mark not previously requested or specified?</p>
@@ -447,7 +451,7 @@
                                                     <label for="inlineRadio7" class="radio-inline radiocontainer">Yes<input type="radio" name="npsradio" id="inlineRadio7" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                     <label for="inlineRadio8" class="radio-inline radiocontainer">No<input type="radio" name="npsradio" id="inlineRadio8" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                 </div><!--END radiogroup-->
-                                                <div id="yesnps" role="region alert" aria-labelledby="translit">
+                                                <div id="yesnps" role="alert" aria-labelledby="translit">
                                                     <p id="whichnps">Identify which of the following it contains:</p> 
                                                     <input class="form-check-input checkmark" type="checkbox" value="name" tabindex="0" aria-labelledby="checkname" id="namechecked">
                                                     <label class="form-check-label form-check" for="namechecked" id="checkname"><span class="radio notspecial">Name</span></label>
@@ -647,7 +651,7 @@
                                               <label for="inlineRadio011" class="radio-inline radiocontainer">Yes<input type="radio" name="priorradio" id="inlineRadio011" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                               <label for="inlineRadio012" class="radio-inline radiocontainer">No<input type="radio" name="priorradio" id="inlineRadio012" value="no" tabindex="0"><span class="checkmark"></span></label>
                                             </div><!--END radiogroup-->
-                                            <div id="yesprior" role="region alert" aria-labelledby="prioreg" class="form-group form-group-md">
+                                            <div id="yesprior" role="alert" aria-live="assertive" aria-labelledby="prioreg" class="form-group form-group-md">
                                                 <div class="row docket">
                                                     <div class="form-group form-group-md col-xs-9">
                                                         <label for="yesprior">Enter prior U.S. registration numbers. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
@@ -689,7 +693,7 @@
                                                   <label for="inlineRadio013" class="radio-inline radiocontainer">Yes<input type="radio" name="meaningradio" id="inlineRadio013" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                   <label for="inlineRadio014" class="radio-inline radiocontainer">No<input type="radio" name="meaningradio" id="inlineRadio014" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                 </div><!--END radiogroup-->
-                                                <div id="yesmeaning" role="region alert" class="form-horizontal form-group form-group-md">
+                                                <div id="yesmeaning" role="alert" aria-live="assertive" class="form-horizontal form-group form-group-md">
                                                 	<div class="row">
                                                         <div class="col-xs-12 col-md-4">
                                                             <label for="yesmeaning" class="sr-only">What has meaning or significance?</label>
