--- a/owner_info_M1.html
+++ b/owner_info_M1.html
@@ -245,7 +245,7 @@
                                     <script type="application/javascript" src="js/accordion.js"></script>
                                     <script type="application/javascript" src="js/checkbox.js"></script>
                                     <script type="application/javascript" src="js/btn_checkbox.js"></script>
-                                    <div id="yesusentity" role="region alert" aria-labelledby="usforeign">
+                                    <div id="yesusentity" role="alert" aria-live="assertive" aria-labelledby="usforeign">
                                         <fieldset aria-labelledby="entitytype">
                                             <div class="row">
                                               <div class="form-group form-group-md col-xs-6">
@@ -276,7 +276,7 @@
                                         </fieldset><!--END US Owner Information-->
                                     </div><!--END US owner toggle area-->
                                     
-                                    <div id="yesforeignentity" role="region alert" aria-labelledby="usforeign">
+                                    <div id="yesforeignentity" role="alert" aria-live="assertive" aria-labelledby="usforeign">
                                         <fieldset aria-labelledby="entitytype">
                                             <div class="row">
                                               <div class="form-group form-group-md col-xs-12 col-lg-6">
