SOU Completion, DBoard A11Y, role="region alert" Fix
-- removed role=“region… from role=“region alert” when both roles are desired due to inconsistent screen reader behavior when using multiple aria roles
-- Dashboard DataTables A11Y Responsive (Hidden) Rows
-- SOU BA Change Req. + Add / Remove Class (completion of original dev work)

--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
-    <title>USPTO.gov :: webapp prototype :: Dashboard</title>
+    <title>Dashboard :: USPTO.gov :: webapp prototype</title>
   	<script type="application/javascript" src="js/chrome_alert.js"></script>
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -154,10 +154,11 @@
                                                             <table id="dashboardtableone" class="table dataTable row-border display responsive" style="width:100%" role="grid" aria-describedby="filings">
                                                                 <thead>
                                                                     <tr role="row">
-                                                                        <th colspan="6" scope="colgroup"><span id="filingsheader">Filings</span> <button type="button" class="btn-sm btn-success fill">New Application</button></th>
+                                                                        <th colspan="7" scope="colgroup"><span id="filingsheader">Filings</span> <button type="button" class="btn-sm btn-success fill">New Application</button></th>
                                                                     </tr>
                                                                     <tr role="row">
-                                                                        <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" role="columnheader"></th>
+                                                                    	<th scope="col" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" role="columnheader"></th><!--control-->
+                                                                        <th scope="col" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" role="columnheader"></th>
                                                                         <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" role="columnheader"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> Serial#</th>
                                                                         <th scope="col" class="sorting_asc tablet" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" role="columnheader"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> Registration#</th>
                                                                         <th scope="col" class="tablet" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" role="columnheader"> Mark</th>
@@ -167,6 +168,7 @@
                                                                 </thead>
                                                                 <tbody>
                                                                   <tr>
+                                                                  	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td><!--control-->
                                                                   	<td tabindex="0"><button type="button" class="btn btn-sm close deleterow" value="" aria-label="remove this row"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></td>
                                                                     <td tabindex="0">87697840</td>
                                                                     <td tabindex="0">87697838</td>
@@ -175,6 +177,7 @@
                                                                     <td tabindex="0">Draft</td>
                                                                   </tr>
                                                                   <tr>
+                                                                  	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td><!--control-->
                                                                   	<td tabindex="0"><button type="button" class="btn btn-sm close deleterow" value="" aria-label="remove this row"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></td>
                                                                     <td tabindex="0">87697248</td>
                                                                     <td tabindex="0">87587238</td>
@@ -183,6 +186,7 @@
                                                                     <td>Completed</td>
                                                                   </tr>
                                                                   <tr>
+                                                                  	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td><!--control-->
                                                                   	<td tabindex="0"><button type="button" class="btn btn-sm close deleterow" value="" aria-label="remove this row"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></td>
                                                                     <td tabindex="0">87697840</td>
                                                                     <td tabindex="0">87697839</td>
@@ -191,6 +195,7 @@
                                                                     <td tabindex="0">Draft</td>
                                                                   </tr>
                                                                   <tr>
+                                                                  	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td><!--control-->
                                                                   	<td tabindex="0"><button type="button" class="btn btn-sm close deleterow" value="" aria-label="remove this row"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></td>
                                                                     <td tabindex="0">87697899</td>
                                                                     <td tabindex="0">87693875</td>
@@ -199,6 +204,7 @@
                                                                     <td tabindex="0">Draft</td>
                                                                   </tr>
                                                                   <tr>
+                                                                  	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td><!--control-->
                                                                   	<td tabindex="0"><button type="button" class="btn btn-sm close deleterow" value="" aria-label="remove this row"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></td>
                                                                     <td tabindex="0">87697294</td>
                                                                     <td tabindex="0">87697387</td>
@@ -226,7 +232,7 @@
                                                                         <th colspan="8" scope="colgroup">Upcoming Action(s) Due</th>
                                                                     </tr>
                                                                     <tr role="row">
-                                                                    	<th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" role="columnheader"></th>
+                                                                    	<th scope="col" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" role="columnheader"></th><!--control-->
                                                                         <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" role="columnheader" aria-sort="ascending" aria-label="activate to sort column descending"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> Serial#</th>
                                                                         <th scope="col" class="sorting_asc tablet desktop" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" role="columnheader" aria-sort="ascending" aria-label="activate to sort column descending"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> Registration#</th>
                                                                         <th scope="col" class="sorting tablet desktop" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" role="columnheader"> Mark</th>
@@ -238,7 +244,7 @@
                                                                 </thead>
                                                                 <tbody>
                                                                   <tr>
-                                                                  	<td tabindex="0"></td>
+                                                                  	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td>
                                                                     <td tabindex="0">87697840</td>
                                                                     <td tabindex="0">87697834</td>
                                                                     <td tabindex="0"><img src="images/designwithtext_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
@@ -248,7 +254,7 @@
                                                                     <td tabindex="0"><a href="#">File a Petition to Revive</a></td>
                                                                   </tr>
                                                                   <tr>
-                                                                  	<td tabindex="0"></td>
+                                                                  	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td>
                                                                     <td tabindex="0">87697248</td>
                                                                     <td tabindex="0">87697235</td>
                                                                     <td tabindex="0"><img src="images/stylized_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
@@ -258,7 +264,7 @@
                                                                     <td tabindex="0">None</td>
                                                                   </tr>
                                                                   <tr>
-                                                                  	<td tabindex="0"></td>
+                                                                  	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td>
                                                                     <td tabindex="0">87697899</td>
                                                                     <td tabindex="0">87697823</td>
                                                                     <td tabindex="0"><img src="images/coloronly_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
@@ -268,7 +274,7 @@
                                                                     <td tabindex="0">Filing Basis, Additional Information, Confirm and Pay</td>
                                                                   </tr>
                                                                   <tr>
-                                                                  	<td tabindex="0"></td>
+                                                                  	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td>
                                                                     <td tabindex="0">87697840</td>
                                                                     <td tabindex="0">87697834</td>
                                                                     <td tabindex="0"><img src="images/stylized_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
@@ -278,7 +284,7 @@
                                                                     <td tabindex="0"><a href="#">File a Petition to Revive</a></td>
                                                                   </tr>
                                                                   <tr>
-                                                                  	<td tabindex="0"></td>
+                                                                  	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td>
                                                                     <td tabindex="0">87697248</td>
                                                                     <td tabindex="0">87697235</td>
                                                                     <td tabindex="0"><img src="images/adf-d-8-e-123-jpg.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
@@ -288,7 +294,7 @@
                                                                     <td tabindex="0">None</td>
                                                                   </tr>
                                                                   <tr>
-                                                                  	<td tabindex="0"></td>
+                                                                  	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td>
                                                                     <td tabindex="0">87697899</td>
                                                                     <td tabindex="0">87697823</td>
                                                                     <td tabindex="0"><img src="images/designonly_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
@@ -298,7 +304,7 @@
                                                                     <td tabindex="0">Filing Basis, Additional Information, Confirm and Pay</td>
                                                                   </tr>
                                                                   <tr>
-                                                                  	<td tabindex="0"></td>
+                                                                  	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td>
                                                                     <td tabindex="0">87697840</td>
                                                                     <td tabindex="0">87697834</td>
                                                                     <td tabindex="0"><img src="images/designonly_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
@@ -308,7 +314,7 @@
                                                                     <td tabindex="0"><a href="#">Respond to Office Action</a></td>
                                                                   </tr>
                                                                   <tr>
-                                                                  	<td tabindex="0"></td>
+                                                                  	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td>
                                                                     <td tabindex="0">87697248</td>
                                                                     <td tabindex="0">87697235</td>
                                                                     <td tabindex="0"><img src="images/designwithtext_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
@@ -318,7 +324,7 @@
                                                                     <td tabindex="0">None</td>
                                                                   </tr>
                                                                   <tr>
-                                                                  	<td tabindex="0"></td>
+                                                                  	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td>
                                                                     <td tabindex="0">87697899</td>
                                                                     <td tabindex="0">87697823</td>
                                                                     <td tabindex="0"><img src="images/Example2_shape_words.jpg" class="img-thumbnail" width="55" alt="Your mark"></td>
